<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/menu_nav_home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/ic_baseline_explore_24"
        android:title="@string/menu_nav_map"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_story"
        android:icon="@drawable/ic_baseline_add_box_24"
        android:title="@string/menu_add_story"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/menu_nav_setting"
        app:showAsAction="ifRoom" />
</menu>